<resources>
    <string name="app_name">Crypto T</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    <string name=""></string>-->

    <string name="welcome_em">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="cryptos">Cryptos</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="general">General</string>
    <string name="log_out">Log Out</string>
    <string name="icon">Icon</string>
    <string name="select">Select</string>
    <string name="video">Video</string>
    <string name="event">Event</string>
    <string name="pick_location">Pick location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="note">Note</string>
    <string name="remove">Remove</string>
    <string name="language">Language</string>
    <string name="system">System</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="add_crypto">Add crypto</string>

    <string name="invalid_email">Invalid email</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="must_be_not_empty">Must be not empty</string>

    <string name="new_crypto">New Crypto</string>
    <string name="edit_crypto">Edit Crypto</string>

    <string name="details">Details</string>
    <string name="select_icon">Select Icon</string>
    <string name="select_video">Select Video</string>
    <string name="pick_event_location">Pick Event Location</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_video">Delete Video</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="delete_asset">Delete Asset</string>
</resources>