<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/safe_area_x"
    android:paddingTop="@dimen/safe_area_x"
    android:paddingEnd="@dimen/safe_area_x"
    tools:context=".screens.creator.CreatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fragment_creator_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/fragment_creator_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:ems="10"
            android:hint="@string/code"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/fragment_creator_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/section_spacing"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_creator_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_grade_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/element_spacing"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fragment_creator_button_select_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/button_half_spacing"
                    android:layout_weight="1"
                    android:text="@string/select_icon" />

                <Button
                    android:id="@+id/fragment_creator_button_delete_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_half_spacing"
                    android:layout_weight="1"
                    android:text="@string/delete_icon" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/section_spacing"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <VideoView
                    android:id="@+id/fragment_creator_video"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/video_height"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/element_spacing"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fragment_creator_button_select_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/button_half_spacing"
                    android:layout_weight="1"
                    android:text="@string/select_video" />

                <Button
                    android:id="@+id/fragment_creator_button_delete_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_half_spacing"
                    android:layout_weight="1"
                    android:text="@string/delete_video" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/section_spacing"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_creator_event_info_stack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/latitude"
                        android:textSize="@dimen/text_font_size" />

                    <TextView
                        android:id="@+id/fragment_creator_text_event_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="LAT"
                        android:textAlignment="viewEnd"
                        android:textSize="@dimen/text_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/longitude"
                        android:textSize="@dimen/text_font_size" />

                    <TextView
                        android:id="@+id/fragment_creator_text_event_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="LONG"
                        android:textAlignment="viewEnd"
                        android:textSize="@dimen/text_font_size" />
                </LinearLayout>

                <EditText
                    android:id="@+id/fragment_creator_tf_event_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:ems="10"
                    android:hint="@string/note"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/element_spacing"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fragment_creator_button_pick_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/button_half_spacing"
                    android:layout_weight="1"
                    android:text="@string/pick_location" />

                <Button
                    android:id="@+id/fragment_creator_button_delete_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_half_spacing"
                    android:layout_weight="1"
                    android:text="@string/delete_event" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/fragment_creator_button_delete_asset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_spacing"
            android:text="@string/delete_asset" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/fragment_creator_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>