<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_home"
    app:startDestination="@id/cryptosFragment">

    <fragment
        android:id="@+id/cryptosFragment"
        android:name="com.xcnk.cryptot.screens.home.cryptos.CryptosFragment"
        android:label="@string/cryptos"
        tools:layout="@layout/fragment_cryptos" >
        <action
            android:id="@+id/action_cryptosFragment_to_creatorActivity"
            app:destination="@id/creatorActivity" />
        <action
            android:id="@+id/action_cryptosFragment_to_cryptoDetailsActivity"
            app:destination="@id/cryptoDetailsActivity" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.xcnk.cryptot.screens.home.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.xcnk.cryptot.screens.home.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <activity
        android:id="@+id/creatorActivity"
        android:name="com.xcnk.cryptot.screens.creator.CreatorActivity"
        android:label="activity_creator"
        tools:layout="@layout/activity_creator" />
    <activity
        android:id="@+id/cryptoDetailsActivity"
        android:name="com.xcnk.cryptot.screens.cryptoDetails.CryptoDetailsActivity"
        android:label="activity_crypto_details"
        tools:layout="@layout/activity_crypto_details" />
</navigation>